src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_section_ok_5.snap
---
source: src/parsers/mail_parser.rs
expression: "group_section(\"GROUP_MA BORD_INT \\nbI1 Bi2 \\n FINSF\")"
---
Ok(
    (
        "",
        Group(
            Group {
                group_type: Cell,
                name: "BORD_INT",
                elems: [
                    "bI1",
                    "Bi2",
                ],
            },
        ),
    ),
)
