src/parsers/snapshots/meshb__parsers__mail_parser__tests__group_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "group_section(\"GROUP_NO nom = BORD_INT \\n bI1 Bi2\\n FINSF\")"
---
Ok(
    (
        "",
        Group(
            Group {
                group_type: Node,
                name: "BORD_INT",
                elems: [
                    "bI1",
                    "Bi2",
                ],
            },
        ),
    ),
)
